{
    "name": "GameInput",
    "maps": [
        {
            "name": "Console",
            "id": "f3429d8d-a20d-46da-8941-3d1f3b19159d",
            "actions": [
                {
                    "name": "ToggleConsole",
                    "type": "Button",
                    "id": "81d8bfb3-06a9-484a-841b-9598944a1ecd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "AutoComplete",
                    "type": "Button",
                    "id": "f172c47a-cba5-4b1c-b153-c802d6978817",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HistoryUp",
                    "type": "Button",
                    "id": "d8d6bf72-842e-4440-b42a-10610510fad6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HistoryDown",
                    "type": "Button",
                    "id": "c798c230-b894-4124-9324-c637d5e4c894",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SubmitInput",
                    "type": "Button",
                    "id": "7ed22b2a-26cf-4580-bb4a-8ccfeb3e83ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3261766d-74ae-421f-be12-f893cc2ae8ed",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "ToggleConsole",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d33f864-3bad-4e60-908d-6a60dea8dc1f",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "AutoComplete",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d15723b0-8349-4dc5-bb63-97be50dea492",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "HistoryUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2544f27d-8483-45f7-b4ae-dd29db35de1f",
                    "path": "<Keyboard>/pageUp",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "HistoryUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c5c4fab-3aeb-4850-a214-4e1778acc549",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "HistoryDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3960e645-6fbe-4e4c-b945-e5774dce1620",
                    "path": "<Keyboard>/pageDown",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "HistoryDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba755523-c1bf-449a-90bb-aad0fb5700a3",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "SubmitInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4092c7c-f047-4334-82b1-0f77701e7484",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "SubmitInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MenuController",
            "id": "94878f43-56d2-4d25-8782-ef6ec623286e",
            "actions": [
                {
                    "name": "Close",
                    "type": "Button",
                    "id": "44234032-4fd7-4286-b535-117fdff0b435",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e0a2f3bd-8315-43f1-829e-5d3aa5a77adb",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "StartVideo",
            "id": "df7b0a06-e16a-4698-9061-0eea7267b829",
            "actions": [
                {
                    "name": "Skip",
                    "type": "Button",
                    "id": "185fe5c5-0670-418d-a606-5a318b4f0e90",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "67fa4ab2-92c0-401d-8bfd-bb7b4d44b290",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DebugMenu",
            "id": "8f2f2761-ee31-4e51-9ad0-f00b8ecd8957",
            "actions": [
                {
                    "name": "ToggleMenu",
                    "type": "Button",
                    "id": "768fde4b-d40c-4a39-b0d1-26a99d061ba8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a533ece7-fcbd-4674-9583-ee8f55fe00f0",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "ToggleMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "b89642bb-b069-4676-83b4-13d73f3c5e0e",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "1f4c7b6f-6cf9-47bb-983f-df5e9759019b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "f944ac8c-c24a-4713-bea7-0a4fb3a734c3",
                    "expectedControlType": "Vector2",
                    "processors": "ScaleVector2(x=0.5,y=0.5)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ScoreBoard",
                    "type": "Button",
                    "id": "4d2b60cd-4942-4793-a050-0566a553ee22",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "Suicide",
                    "type": "Button",
                    "id": "ee0ff9a6-6394-4556-bebb-1d8194490890",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "fc490ca0-1fb5-4fb9-93e5-277f5e819682",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "a4954379-46da-4348-8f4c-3f87fc09e49d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSelection",
                    "type": "Value",
                    "id": "75e6bbb3-9a28-4b13-a87a-9dc96932b16e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ReloadWeapon",
                    "type": "Button",
                    "id": "a98c354d-d84a-474b-8a41-9bb52f98d186",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootWeapon",
                    "type": "Value",
                    "id": "774017ef-43d3-4248-b042-b30dafb45737",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.01,behavior=2)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "e0868325-2507-4719-9a91-6b6340aa1ae0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "817b007a-bea4-4b74-91fe-6df681621973",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2f0a6348-92f5-4c3b-96c3-4c0bc199dd3a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8e126bf7-12b7-4a0d-85f4-b820c1cd5466",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a0f59049-bc2c-4c71-942d-9bd62f5e81de",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "251fd00f-0cee-4e37-84f2-85c7ca5c43e7",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b774095-6274-41a4-8044-108abfa35742",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "ScoreBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4be1904a-5c3a-46d3-b1c9-b96fb6635215",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Suicide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d52655ad-ce66-4639-b662-66d6ca312418",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89111bc2-d9ba-46c0-a797-ed7dbf863d3c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "872aef05-ccf2-40e0-99a3-ad826420a473",
                    "path": "<Mouse>/scroll/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "WeaponSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41ec4b0f-6c3b-42e7-af7e-44d219fc39b7",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "WeaponSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e270918e-fff2-43f2-8069-46d1a4bca491",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "ReloadWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7713805d-7180-4087-9bd9-a1e1645ab8b3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "ShootWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Chat",
            "id": "828335d4-e438-4e3e-9ee0-6a40824abdff",
            "actions": [
                {
                    "name": "ToggleChat",
                    "type": "Button",
                    "id": "712ab24b-122c-40ac-83c0-fd17740c1cf8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SubmitChat",
                    "type": "Button",
                    "id": "13b51f9c-919b-435e-9232-de2aafbdd6b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "17370327-8418-4a37-9518-e7ffb21bf530",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "ToggleChat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62e8d72d-0f75-4e19-87c2-795e511daa16",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "SubmitChat",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerDeathCam",
            "id": "93f268be-e27d-4637-a03b-d1c6e1462395",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "77c04bca-fa1f-47bd-83d7-74b12b39cbed",
                    "expectedControlType": "Vector2",
                    "processors": "ScaleVector2(x=0.5,y=0.5)",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8d359f78-62bb-48ba-a294-738ad70a6058",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}